add eclipse metadata

--- a/.ceylon/config
+++ b/.ceylon/config
@@ -2,9 +2,11 @@
 [compiler]
 source=source
 resource=resource
+suppresswarning=inferredNotNull
 
 [defaults]
 offline=false
 flatclasspath=false
 autoexportmavendependencies=false
 fullyexportmavendependencies=false
+encoding=UTF-8
